[project]
name = "fetch-backend"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "pydantic[email]>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "PyJWT[crypto]>=2.8,<3",
    "passlib[bcrypt]>=1.7,<2",
    "bcrypt>=4.0,<4.1",
    "python-multipart>=0.0.6,<1",
    "Pillow>=10.2,<11",
    "slowapi>=0.1.9,<1",
    "httpx>=0.27,<1",
    "celery[redis]>=5.3,<6",
    "redis>=5.0,<6",
    "structlog>=24.1,<25",
    "sentry-sdk[fastapi]>=1.40,<3",
    "prometheus-fastapi-instrumentator>=7.0,<8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "ruff>=0.2,<1",
    "black>=24,<25",
    "faker>=23,<30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
